Constantly update source value

--- a/index.html
+++ b/index.html
@@ -106,42 +106,32 @@
 
   <div id="content">
 
+    <button class="btn btn-primary" id="btn-test">TEST</button>
+
     <div id="questcard-page" x-effect="console.log(data.quests)">
       <!-- Card -->
       <template x-for="(quest, index) in data.quests[currentPage-1]">
         <div class="card mb-3 fs-6" x-ref="card">
+
           <div class="card-header fw-light d-flex flex-row justify-content-between">
             <span x-text="`${quest.AE.comp} | ${quest.AE.layer} | ${quest.AE.prop}`">Source</span>
 
-            <div class="button-group d-flex flex-row gap-3">
-
+            <div class="button-group d-flex flex-row justify-content-end gap-3">
               <!-- Up -->
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+              <img src="./icons/angle-up-solid.svg" alt=""
                 @click="()=>{if(index===0)return;data.quests[currentPage-1].splice(index-1,0,quest);data.quests[currentPage-1].splice(index+1,1)}">
-                <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                <path
-                  d="M352 352c-8.188 0-16.38-3.125-22.62-9.375L192 205.3l-137.4 137.4c-12.5 12.5-32.75 12.5-45.25 0s-12.5-32.75 0-45.25l160-160c12.5-12.5 32.75-12.5 45.25 0l160 160c12.5 12.5 12.5 32.75 0 45.25C368.4 348.9 360.2 352 352 352z" />
-              </svg>
 
               <!-- Down -->
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"
+              <img src="./icons/angle-down-solid.svg" alt=""
                 @click="()=>{console.log(index);if(index===data.quests[currentPage-1].length - 1)return;data.quests[currentPage-1].splice(index+2,0,quest);data.quests[currentPage-1].splice(index,1);}">
-                <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                <path
-                  d="M192 384c-8.188 0-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L192 306.8l137.4-137.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-160 160C208.4 380.9 200.2 384 192 384z" />
-              </svg>
 
               <!-- Cross -->
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" @click="data.quests[currentPage - 1] = data.quests[currentPage - 1].filter(
+              <img src="./icons/xmark-solid.svg" alt="" @click="data.quests[currentPage - 1] = data.quests[currentPage - 1].filter(
                 (q) => q.uuid != quest.uuid)">
-                <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-                <path
-                  d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z" />
-              </svg>
-
             </div>
 
           </div>
+          
           <div class="card-body">
 
             <!-- Title input -->
@@ -282,7 +272,7 @@
   </div>
 
   <!-- These are debugging shortcuts.  Class debuglink items only appear in debug mode  -->
-  <span class="debuglink" id="reload">Reload</span>
+  <span class="debuglink" id="reload" style="cursor:pointer" @click="location.reload()">Reload</span>
   <span class="debuglink" id="debug">Debug</span>
   <span class="debuglink" id="sources">Sources</span>
 
