--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
         <div class="input-group mb-3 mb-2">
           <span class="input-group-text">Title :</span>
           <input type="text" class="form-control p-2 fs-5" x-model="data.formTitle">
+          <button class="btn btn-secondary" @click="jsx.evalScript('app.project.file.name', res=>{
+            data.formTitle = res.split('.aep')[0];
+          })">AUTO</button>
         </div>
 
         <div class="input-group">
@@ -106,8 +109,6 @@
 
   <div id="content">
 
-    <button class="btn btn-primary" id="btn-test">TEST</button>
-
     <div id="questcard-page" x-effect="console.log(data.quests)">
       <!-- Card -->
       <template x-for="(quest, index) in data.quests[currentPage-1]">
@@ -118,20 +119,20 @@
 
             <div class="button-group d-flex flex-row justify-content-end gap-3">
               <!-- Up -->
-              <img src="./icons/angle-up-solid.svg" alt=""
+              <img class="card-button" src="./icons/angle-up-solid.svg" alt=""
                 @click="()=>{if(index===0)return;data.quests[currentPage-1].splice(index-1,0,quest);data.quests[currentPage-1].splice(index+1,1)}">
 
               <!-- Down -->
-              <img src="./icons/angle-down-solid.svg" alt=""
+              <img class="card-button" src="./icons/angle-down-solid.svg" alt=""
                 @click="()=>{console.log(index);if(index===data.quests[currentPage-1].length - 1)return;data.quests[currentPage-1].splice(index+2,0,quest);data.quests[currentPage-1].splice(index,1);}">
 
               <!-- Cross -->
-              <img src="./icons/xmark-solid.svg" alt="" @click="data.quests[currentPage - 1] = data.quests[currentPage - 1].filter(
+              <img class="card-button" src="./icons/xmark-solid.svg" alt="" @click="data.quests[currentPage - 1] = data.quests[currentPage - 1].filter(
                 (q) => q.uuid != quest.uuid)">
             </div>
 
           </div>
-          
+
           <div class="card-body">
 
             <!-- Title input -->
@@ -180,11 +181,13 @@
                         disabled>
                     </div>
                     <input type="text" class="form-control" aria-label="Text input with radio button"
-                      x-model="quest.form.options[index]" size="50">
+                      x-model="quest.form.options[index]" size="20">
                     <!-- Add option button -->
                     <button type="button" class="btn btn-primary" x-show="index == quest.form.options.length - 1"
-                      @click="quest.form.options.push('新選項')">Add
-                      Option</button>
+                      @click="quest.form.options.push('新選項')">+</button>
+                    <!-- Remove option button -->
+                    <button type="button" class="btn btn-danger" x-show="index == quest.form.options.length - 1"
+                      :disabled="quest.form.options.length <= 1" @click="quest.form.options.pop()">-</button>
                   </div>
 
                 </template>
@@ -232,6 +235,10 @@
         </div>
       </template>
 
+
+      <!-- Update button -->
+      <button class="btn btn-primary ms-1" id="btn-test">UPDATE</button>
+
       <!-- Add active prop button -->
       <div class="d-flex flex-row justify-content-center">
         <button id="btn-add" type="button" class="btn btn-primary mx-auto" @click="addQuest">＋</button>
@@ -257,8 +264,10 @@
             </svg>
           </li>
 
+          <!-- Remove Page Button -->
           <li>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="btn-page" @click="removePage">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="btn-page"
+              x-show="data.quests.length > 1" @click="removePage">
               <!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
               <path
                 d="M400 288h-352c-17.69 0-32-14.32-32-32.01s14.31-31.99 32-31.99h352c17.69 0 32 14.3 32 31.99S417.7 288 400 288z" />
