--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           Are you sure to submit this form?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @click="submit">OK</button>
+          <button type="button" class="btn btn-primary"  @click="submit">OK</button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         </div>
       </div>
@@ -91,7 +91,8 @@
 
           <!-- Submit Button -->
           <button type="button" class="btn btn-primary align-self-center" data-bs-toggle="modal"
-            data-bs-target="#submitModal">
+            data-bs-target="#submitModal"
+            @click="()=>{document.getElementById('modal-body').innerText = 'Are you sure to submit this form?'}">
             Submit
           </button>
 
