--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="utf-8">
 
+  <script>
+    window.CEP_node_require = window.require && window.require = undefined;
+  </script>
+
+
   <script src="https://kit.fontawesome.com/b695330ad2.js" crossorigin="anonymous"></script>
 
   <!-- Alpine Plugins -->
@@ -34,12 +39,14 @@
           <h5 class="modal-title" id="exampleModalLabel">Confirm Message</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div id="modal-body" class="modal-body" x-ref="modalBody">
+        <div id="modal-body" class="modal-body" x-ref="modalBody" >
           Are you sure to submit this form?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" @click="submit">OK</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button id="submit-OK-button" type="button" class="btn btn-primary" @click="submit"
+           >OK</button>
+          <button id="submit-cancel-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+           >Cancel</button>
         </div>
       </div>
     </div>
@@ -91,8 +98,7 @@
 
           <!-- Submit Button -->
           <button id="btn-submit" type="button" class="btn btn-primary align-self-center" data-bs-toggle="modal"
-            data-bs-target="#submitModal"
-            @click="()=>{document.getElementById('modal-body').innerText = 'Are you sure to submit this form?'}">
+            data-bs-target="#submitModal">
             Submit
           </button>
 
@@ -282,12 +288,12 @@
   </div>
 
   <!-- These are debugging shortcuts.  Class debuglink items only appear in debug mode  -->
-  <span class="debuglink" id="reload" style="cursor:pointer" @click="location.reload()">Reload</span>
+  <span class="debuglink" id="reload" style="cursor:pointer" @click="window.location.reload()">Reload</span>
   <span class="debuglink" id="debug">Debug</span>
   <span class="debuglink" id="sources">Sources</span>
 
   <script src="js/libs/CSInterface.js"></script>
-  <!-- <script src="js/libs/jquery-2.0.2.min.js"></script> -->
+  <script src="js/libs/jquery-2.0.2.min.js"></script>
   <script src="js/libs/json2.js"></script>
   <script src="js/libs/jsx.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.27.2/axios.min.js"
@@ -304,6 +310,7 @@
 
   <script src="js/themecolors.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/save.js"></script>
 
 </body>
 
